# document-server-integration

./: .gitignore  .gitmodules  3rd-Party.license  3rd-Party.txt  CHANGELOG.md  LICENSE.txt  Makefile  Readme.md
web/documentserver-example/python/: .check-licenses.yml  .flake8  .gitignore  .pylintrc  3rd-Party.license  Dockerfile  Makefile  README.md  compose-base.yml  compose-dev.yml  compose-prod.yml  config.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  readme.md
web/documentserver-example/python/licenses/: 3rd-Party.license  PyJWT.license  python-magic.license
web/documentserver-example/python/proxy/: nginx.conf
web/documentserver-example/python/src/: __init__.py  settings.py  urls.py  wsgi.py
web/documentserver-example/python/src/codable/: __init__.py  codable.py  codable_tests.py
web/documentserver-example/python/src/common/: __init__.py  http.py  http_tests.py  optional.py  string.py  string_tests.py
web/documentserver-example/python/src/configuration/: __init__.py  configuration.py  configuration_tests.py
web/documentserver-example/python/src/format/: __init__.py  format.py  format_tests.py
web/documentserver-example/python/src/history/: __init__.py  history.py
web/documentserver-example/python/src/http/: __init__.py  http.py
web/documentserver-example/python/src/memoize/: __init__.py  memoize.py  memoize_tests.py
web/documentserver-example/python/src/optional/: __init__.py  optional.py
web/documentserver-example/python/src/proxy/: __init__.py  proxy.py  proxy_tests.py
web/documentserver-example/python/src/request/: __init__.py  request.py
web/documentserver-example/python/src/response/: __init__.py  response.py
web/documentserver-example/python/src/storage/: __init__.py  (+1 more)
web/documentserver-example/python/templates/: editor.html  forgotten.html  index.html
(+1013 files in other folders)
