[build-system]
requires = [
	"setuptools>=67.6.0"
]

[project]
name = "online-editor-example"
version = "1.6.0"
requires-python = ">=3.11"
dependencies = [
	"django>=3.1.3",
	"pyjwt>=2.6.0",
	"python-magic>=0.4.27",
	"requests>=2.25.0"
]

[project.license]
text = "Apache-2.0"

[[project.authors]]
name = "ONLYOFFICE"
email = "support@onlyoffice.com"
