[build-system]
requires = [
	"setuptools>=67.6.0"
]

[project]
name = "online-editor-example"
version = "1.6.0"
requires-python = ">=3.11"
dependencies = [
	"django>=3.1.3",
	"django-stubs>=4.2.3",
	"msgspec>=0.18.1",
	"pyjwt>=2.6.0",
	"python-magic>=0.4.27",
	"requests>=2.25.0"
]

[project.license]
text = "Apache-2.0"

[[project.authors]]
name = "ONLYOFFICE"
email = "support@onlyoffice.com"

[project.optional-dependencies]
development = [
	"flake8>=6.0.0",
	"mypy>=1.4.1",
	"types-requests>=2.31.0"
]

[tool.mypy]
plugins = [
	"mypy_django_plugin.main"
]

[tool.django-stubs]
django_settings_module = "manage"
