[build-system]
requires = [
	"setuptools>=67.6.0"
]

[project]
name = "online-editor-example"
version = "1.6.0"
requires-python = ">=3.11"
dependencies = [
	"django>=4.2.10",
	"django-stubs>=4.2.7",
	"msgspec>=0.18.6",
	"pyjwt>=2.8.0",
	"python-magic>=0.4.27",
	"requests>=2.31.0"
]

[project.license]
text = "Apache-2.0"

[[project.authors]]
name = "ONLYOFFICE"
email = "support@onlyoffice.com"

[project.optional-dependencies]
development = [
	"flake8>=7.0.0",
	"mypy>=1.8.0",
	"types-requests>=2.31.0"
]

[tool.mypy]
plugins = [
	"mypy_django_plugin.main"
]

[tool.django-stubs]
django_settings_module = "manage"
